--- a/package.json
+++ b/package.json
@@ -7,6 +7,12 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
-  "author": "",
-  "license": "ISC"
+  "author": "Andrew Truett",
+  "license": "ISC",
+  "dependencies": {
+    "csv-parser": "^2.1.0",
+    "express": "^4.16.4",
+    "fs": "0.0.1-security",
+    "path": "^0.12.7"
+  }
 }
